--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/sadovnic13/todo_list/blob/main/doc/api/index.html">
+<meta http-equiv="refresh" content="0; url=https://sadovnic13.github.io/todo_list_doc/">
